@@ -74,7 +74,7 @@ public class Demo5 {
 
 		// 实例化
 		Class<?> beanClass = beanDefinition.getBeanClass();
-		Object instanceBean = beanClass.newInstance();
+		Object instanceBean = beanClass.getDeclaredConstructor().newInstance();
 
 		// 创建动态代理（BeanPostProcessor），只有出现循环依赖的时候，才会在实例化之后，提前创建
 		// 判断当前是不是循环依赖
